--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
